--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -8,8 +8,11 @@ jobs:
 
     services:
       postgres:
-        image: postgres:11.5
+        image: postgres:11
         ports: ["5432:5432"]
+        env:
+          POSTGRES_USER: corbot
+          POSTGRES_PASSWORD: corbot
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
 
     steps:
