--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -32,3 +32,4 @@ jobs:
           bundle exec rspec
         env:
           RACK_ENV: test
+          CC_TEST_REPORTER_ID: 5a1d69f3c0ffdeafa3ca7867c49268d138efecd95267d469f4ae45c48a217cf4
