--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -31,5 +31,6 @@ jobs:
           bundle install --jobs 4 --retry 3
           bundle exec rspec
         env:
+          COVERAGE: 1
           RACK_ENV: test
           CC_TEST_REPORTER_ID: 5a1d69f3c0ffdeafa3ca7867c49268d138efecd95267d469f4ae45c48a217cf4
