--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -25,12 +25,20 @@ jobs:
       - name: Install PostgreSQL 11 client
         run: |
           sudo apt-get -yqq install libpq-dev
+      - name: Install CodeClimate Reporter
+        run: |
+          curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+          chmod +x ./cc-test-reporter
+          ./cc-test-reporter before-build
+        env:
+          CC_TEST_REPORTER_ID: "5a1d69f3c0ffdeafa3ca7867c49268d138efecd95267d469f4ae45c48a217cf4"
       - name: Build and run rspec
         run: |
           gem install bundler
           bundle install --jobs 4 --retry 3
           bundle exec rspec
+          ./cc-test-reporter after-build
         env:
           COVERAGE: 1
           RACK_ENV: test
-          CC_TEST_REPORTER_ID: 5a1d69f3c0ffdeafa3ca7867c49268d138efecd95267d469f4ae45c48a217cf4
+          CC_TEST_REPORTER_ID: "5a1d69f3c0ffdeafa3ca7867c49268d138efecd95267d469f4ae45c48a217cf4"
