--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -35,8 +35,8 @@ jobs:
           bundle install --jobs 4 --retry 3
           ./cc-test-reporter before-build
           bundle exec rspec
-          ./cc-test-reporter after-build
+          ./cc-test-reporter after-build -r ${{secrets.CC_TEST_REPORTER_ID}}
         env:
           COVERAGE: 1
           RACK_ENV: test
-          CC_TEST_REPORTER_ID: 5a1d69f3c0ffdeafa3ca7867c49268d138efecd95267d469f4ae45c48a217cf4
+          GIT_BRANCH: "${GITHUB_REF/refs\/heads\//}"
