--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -17,11 +17,11 @@ jobs:
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
 
     steps:
-      - uses: actions/checkout@v1
-      - name: Set up Ruby 2.6
-        uses: actions/setup-ruby@v1
+      - uses: actions/checkout@v2
+      - name: Set up Ruby 2.7.2
+        uses: ruby/setup-ruby@v1
         with:
-          ruby-version: 2.6.3
+          ruby-version: 2.7.2
       - name: Install PostgreSQL 11 client
         run: |
           sudo apt-get -yqq install libpq-dev
