--- a/config/database.yml
+++ b/config/database.yml
@@ -7,14 +7,14 @@ default: &default
 development:
   <<: *default
   database: corbot_dev
-  username: corbot
-  password: corbot
+  username: postgres
+  password: postgres
 
 test:
   <<: *default
   database: corbot_test
-  username: corbot
-  password: corbot
+  username: postgres
+  password: postgres
 
 production:
   <<: *default
